INCLUDE_DIRECTORIES(../include)

SET(TESTSUITES test1.c test2.c test3.c test4.c test5.c)
CREATE_TEST_SOURCELIST(TESTSRC test_driver.c ${TESTSUITES})

ADD_EXECUTABLE(test_driver ${TESTSRC})
TARGET_LINK_LIBRARIES(test_driver cheats)

FOREACH(TEST ${TESTSUITES})
   GET_FILENAME_COMPONENT(NAME ${TEST} NAME_WE)
   ADD_TEST(${NAME} test_driver ${NAME} ${CMAKE_CURRENT_SOURCE_DIR}/cheats.txt)
ENDFOREACH(TEST)
