INCLUDE(CheckIncludeFile)

CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H)
IF (HAVE_STDINT_H)
  ADD_DEFINITIONS(-DHAVE_STDINT_H)
ENDIF (HAVE_STDINT_H)

CHECK_INCLUDE_FILE(sys/queue.h HAVE_SYS_QUEUE_H)
IF (HAVE_SYS_QUEUE_H)
  ADD_DEFINITIONS(-DHAVE_SYS_QUEUE_H)
ENDIF (HAVE_SYS_QUEUE_H)

SET(CMAKE_C_FLAGS "-O2 -Wall")

#ADD_DEFINITIONS(-D_DEBUG)

INCLUDE_DIRECTORIES(../include)

ADD_LIBRARY(cheats SHARED cheatlist.c mystring.c parser.c libcheats.c)

INSTALL(TARGETS cheats DESTINATION lib)
INSTALL(FILES ../include/cheatlist.h ../include/libcheats.h DESTINATION include)
